QtBeef/src/Qt/qtablewidget.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QTableWidgetSelectionRange
// --------------------------------------------------------------
[CRepr]
struct QTableWidgetSelectionRange_Ptr: void
{
}
extension CQt
{
	[LinkName("QTableWidgetSelectionRange_new")]
	public static extern QTableWidgetSelectionRange_Ptr* QTableWidgetSelectionRange_new(QTableWidgetSelectionRange_Ptr* other);
	[LinkName("QTableWidgetSelectionRange_new2")]
	public static extern QTableWidgetSelectionRange_Ptr* QTableWidgetSelectionRange_new2(QTableWidgetSelectionRange_Ptr* other);
	[LinkName("QTableWidgetSelectionRange_new3")]
	public static extern QTableWidgetSelectionRange_Ptr* QTableWidgetSelectionRange_new3();
	[LinkName("QTableWidgetSelectionRange_new4")]
	public static extern QTableWidgetSelectionRange_Ptr* QTableWidgetSelectionRange_new4(c_int top, c_int left, c_int bottom, c_int right);
	[LinkName("QTableWidgetSelectionRange_Delete")]
	public static extern void QTableWidgetSelectionRange_Delete(QTableWidgetSelectionRange_Ptr* self);
	[LinkName("QTableWidgetSelectionRange_TopRow")]
	public static extern c_int QTableWidgetSelectionRange_TopRow(QTableWidgetSelectionRange_Ptr* self);
	[LinkName("QTableWidgetSelectionRange_BottomRow")]
	public static extern c_int QTableWidgetSelectionRange_BottomRow(QTableWidgetSelectionRange_Ptr* self);
	[LinkName("QTableWidgetSelectionRange_LeftColumn")]
	public static extern c_int QTableWidgetSelectionRange_LeftColumn(QTableWidgetSelectionRange_Ptr* self);
	[LinkName("QTableWidgetSelectionRange_RightColumn")]
	public static extern c_int QTableWidgetSelectionRange_RightColumn(QTableWidgetSelectionRange_Ptr* self);
	[LinkName("QTableWidgetSelectionRange_RowCount")]
	public static extern c_int QTableWidgetSelectionRange_RowCount(QTableWidgetSelectionRange_Ptr* self);
	[LinkName("QTableWidgetSelectionRange_ColumnCount")]
	public static extern c_int QTableWidgetSelectionRange_ColumnCount(QTableWidgetSelectionRange_Ptr* self);
}
class QTableWidgetSelectionRange
{
	private QTableWidgetSelectionRange_Ptr* ptr;
	public this(QTableWidgetSelectionRange_Ptr* other)
	{
		this.ptr = CQt.QTableWidgetSelectionRange_new(other);
	}
	public this()
	{
		this.ptr = CQt.QTableWidgetSelectionRange_new3();
	}
	public this(c_int top, c_int left, c_int bottom, c_int right)
	{
		this.ptr = CQt.QTableWidgetSelectionRange_new4(top, left, bottom, right);
	}
	public ~this()
	{
		CQt.QTableWidgetSelectionRange_Delete(this.ptr);
	}
	public c_int TopRow()
	{
		return CQt.QTableWidgetSelectionRange_TopRow(this.ptr);
	}
	public c_int BottomRow()
	{
		return CQt.QTableWidgetSelectionRange_BottomRow(this.ptr);
	}
	public c_int LeftColumn()
	{
		return CQt.QTableWidgetSelectionRange_LeftColumn(this.ptr);
	}
	public c_int RightColumn()
	{
		return CQt.QTableWidgetSelectionRange_RightColumn(this.ptr);
	}
	public c_int RowCount()
	{
		return CQt.QTableWidgetSelectionRange_RowCount(this.ptr);
	}
	public c_int ColumnCount()
	{
		return CQt.QTableWidgetSelectionRange_ColumnCount(this.ptr);
	}
}
interface IQTableWidgetSelectionRange
{
	public c_int TopRow();
	public c_int BottomRow();
	public c_int LeftColumn();
	public c_int RightColumn();
	public c_int RowCount();
	public c_int ColumnCount();
}
// --------------------------------------------------------------
// QTableWidgetItem
// --------------------------------------------------------------
[CRepr]
struct QTableWidgetItem_Ptr: void
{
}
extension CQt
{
	[LinkName("QTableWidgetItem_new")]
	public static extern QTableWidgetItem_Ptr* QTableWidgetItem_new();
	[LinkName("QTableWidgetItem_new2")]
	public static extern QTableWidgetItem_Ptr* QTableWidgetItem_new2(libqt_string* text);
	[LinkName("QTableWidgetItem_new3")]
	public static extern QTableWidgetItem_Ptr* QTableWidgetItem_new3(QIcon_Ptr* icon, libqt_string* text);
	[LinkName("QTableWidgetItem_new4")]
	public static extern QTableWidgetItem_Ptr* QTableWidgetItem_new4(QTableWidgetItem_Ptr* other);
	[LinkName("QTableWidgetItem_new5")]
	public static extern QTableWidgetItem_Ptr* QTableWidgetItem_new5(c_int type);
	[LinkName("QTableWidgetItem_new6")]
	public static extern QTableWidgetItem_Ptr* QTableWidgetItem_new6(libqt_string* text, c_int type);
	[LinkName("QTableWidgetItem_new7")]
	public static extern QTableWidgetItem_Ptr* QTableWidgetItem_new7(QIcon_Ptr* icon, libqt_string* text, c_int type);
	[LinkName("QTableWidgetItem_Delete")]
	public static extern void QTableWidgetItem_Delete(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_Clone")]
	public static extern QTableWidgetItem_Ptr* QTableWidgetItem_Clone(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_TableWidget")]
	public static extern QTableWidget_Ptr* QTableWidgetItem_TableWidget(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_Row")]
	public static extern c_int QTableWidgetItem_Row(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_Column")]
	public static extern c_int QTableWidgetItem_Column(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetSelected")]
	public static extern void QTableWidgetItem_SetSelected(QTableWidgetItem_Ptr* self, bool selectVal);
	[LinkName("QTableWidgetItem_IsSelected")]
	public static extern bool QTableWidgetItem_IsSelected(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_Flags")]
	public static extern void* QTableWidgetItem_Flags(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetFlags")]
	public static extern void QTableWidgetItem_SetFlags(QTableWidgetItem_Ptr* self, void* flags);
	[LinkName("QTableWidgetItem_Text")]
	public static extern libqt_string QTableWidgetItem_Text(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetText")]
	public static extern void QTableWidgetItem_SetText(QTableWidgetItem_Ptr* self, libqt_string* text);
	[LinkName("QTableWidgetItem_Icon")]
	public static extern QIcon_Ptr QTableWidgetItem_Icon(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetIcon")]
	public static extern void QTableWidgetItem_SetIcon(QTableWidgetItem_Ptr* self, QIcon_Ptr* icon);
	[LinkName("QTableWidgetItem_StatusTip")]
	public static extern libqt_string QTableWidgetItem_StatusTip(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetStatusTip")]
	public static extern void QTableWidgetItem_SetStatusTip(QTableWidgetItem_Ptr* self, libqt_string* statusTip);
	[LinkName("QTableWidgetItem_ToolTip")]
	public static extern libqt_string QTableWidgetItem_ToolTip(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetToolTip")]
	public static extern void QTableWidgetItem_SetToolTip(QTableWidgetItem_Ptr* self, libqt_string* toolTip);
	[LinkName("QTableWidgetItem_WhatsThis")]
	public static extern libqt_string QTableWidgetItem_WhatsThis(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetWhatsThis")]
	public static extern void QTableWidgetItem_SetWhatsThis(QTableWidgetItem_Ptr* self, libqt_string* whatsThis);
	[LinkName("QTableWidgetItem_Font")]
	public static extern QFont_Ptr QTableWidgetItem_Font(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetFont")]
	public static extern void QTableWidgetItem_SetFont(QTableWidgetItem_Ptr* self, QFont_Ptr* font);
	[LinkName("QTableWidgetItem_TextAlignment")]
	public static extern c_int QTableWidgetItem_TextAlignment(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetTextAlignment")]
	public static extern void QTableWidgetItem_SetTextAlignment(QTableWidgetItem_Ptr* self, c_int alignment);
	[LinkName("QTableWidgetItem_SetTextAlignment2")]
	public static extern void QTableWidgetItem_SetTextAlignment2(QTableWidgetItem_Ptr* self, Qt_AlignmentFlag alignment);
	[LinkName("QTableWidgetItem_SetTextAlignment3")]
	public static extern void QTableWidgetItem_SetTextAlignment3(QTableWidgetItem_Ptr* self, void* alignment);
	[LinkName("QTableWidgetItem_Background")]
	public static extern QBrush_Ptr QTableWidgetItem_Background(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetBackground")]
	public static extern void QTableWidgetItem_SetBackground(QTableWidgetItem_Ptr* self, QBrush_Ptr* brush);
	[LinkName("QTableWidgetItem_Foreground")]
	public static extern QBrush_Ptr QTableWidgetItem_Foreground(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetForeground")]
	public static extern void QTableWidgetItem_SetForeground(QTableWidgetItem_Ptr* self, QBrush_Ptr* brush);
	[LinkName("QTableWidgetItem_CheckState")]
	public static extern Qt_CheckState QTableWidgetItem_CheckState(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetCheckState")]
	public static extern void QTableWidgetItem_SetCheckState(QTableWidgetItem_Ptr* self, Qt_CheckState state);
	[LinkName("QTableWidgetItem_SizeHint")]
	public static extern QSize_Ptr QTableWidgetItem_SizeHint(QTableWidgetItem_Ptr* self);
	[LinkName("QTableWidgetItem_SetSizeHint")]
	public static extern void QTableWidgetItem_SetSizeHint(QTableWidgetItem_Ptr* self, QSize_Ptr* size);
	[LinkName("QTableWidgetItem_Data")]
	public static extern QVariant_Ptr QTableWidgetItem_Data(QTableWidgetItem_Ptr* self, c_int role);
	[LinkName("QTableWidgetItem_SetData")]
	public static extern void QTableWidgetItem_SetData(QTableWidgetItem_Ptr* self, c_int role, QVariant_Ptr* value);
	[LinkName("QTableWidgetItem_OperatorLesser")]
	public static extern bool QTableWidgetItem_OperatorLesser(QTableWidgetItem_Ptr* self, QTableWidgetItem_Ptr* other);
	[LinkName("QTableWidgetItem_Read")]
	public static extern void QTableWidgetItem_Read(QTableWidgetItem_Ptr* self, QDataStream_Ptr* _in);
	[LinkName("QTableWidgetItem_Write")]
	public static extern void QTableWidgetItem_Write(QTableWidgetItem_Ptr* self, QDataStream_Ptr* _out);
	[LinkName("QTableWidgetItem_OperatorAssign")]
	public static extern void QTableWidgetItem_OperatorAssign(QTableWidgetItem_Ptr* self, QTableWidgetItem_Ptr* other);
	[LinkName("QTableWidgetItem_Type")]
	public static extern c_int QTableWidgetItem_Type(QTableWidgetItem_Ptr* self);
}
